# DetectWindows

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  detectWindows  main.cpp
cfg/: CondEuclidClustering.cfg  GreedyArea.cfg  cloudSubtractor.cfg  hull2d.cfg
cfg/backup/: customRegionGrowing.cfg  hull2d.cfg  issDetector.cfg
h/: areafromconcavehull.h  cloudsubtractor.h  extractfacade.h  inrange.h  removeconcavehullframe.h
src/: CondEuclClustering.hpp  hull2d.hpp  miscFunctions.hpp  pcl_las_helper.hpp
